// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`already-declared-function.js 1`] = `
"export function b() {
	const chicken = \\"chicken\\";
}

export const a = 42;

"
`;

exports[`already-declared-variable.js 1`] = `
"const b = function() {
	const chicken = \\"chicken\\";
};

export const a = 42;

"
`;

exports[`already-exported-function.js 1`] = `
"export function b() {
	const chicken = \\"chicken\\";
}
export const a = 42;

"
`;

exports[`already-exported-variable.js 1`] = `
"export const b = function() {
	const chicken = \\"chicken\\";
};

export const a = 42;

"
`;

exports[`basic.js 1`] = `
"export const a = 4;

export const b = function() {
const chickens = \\"chicken\\";
// do more things
};

"
`;

exports[`literal-keys.js 1`] = `""`;

exports[`scary-properties.js 1`] = `""`;
